--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
+            args:
+                - UID=${UID:-1000}
+                - GID=${GID:-1000}            
         restart: unless-stopped
         working_dir: /var/www/html/
         volumes:
