--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
             MYSQL_PASSWORD: 123456
             MYSQL_USER: etc
         volumes:
-            - ./.docker/mysql/dbdata:/var/lib/mysql
+            - mysql_data_etc:/var/lib/mysql
         ports:
             - "3388:3306"
         command: --default-authentication-plugin=mysql_native_password            
@@ -48,11 +48,19 @@ services:
         networks:
             - etc   
     redis:
-        image: redis:latest
+        image: redis:7
         container_name: redis-etc
+        volumes:
+            - redis_data_etc:/data        
         networks:
             - etc
 
 networks:
     etc:
         driver: bridge
+
+volumes:
+    mysql_data_etc:
+        driver: local       
+    redis_data_etc:
+        driver: local
