--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
     app:
-        container_name: php-apache-etc
+        container_name: php-apache-setup
         build:
             context: .
             dockerfile: Dockerfile
@@ -14,14 +14,14 @@ services:
         volumes:
             - ./:/var/www/html/
         ports:
-            - 3002:80             
+            - 3006:80             
         depends_on:
             - redis
         networks:
-            - etc            
+            - setup            
     db:
         image: mysql:8
-        container_name: mysql-etc
+        container_name: mysql-setup
         restart: unless-stopped
         environment:
             MYSQL_DATABASE: ${DB_DATABASE:-laravel}
@@ -29,35 +29,35 @@ services:
             MYSQL_PASSWORD: ${DB_PASSWORD:-userpass}
             MYSQL_USER: ${DB_USERNAME:-username}
         volumes:
-            - mysql_data_etc:/var/lib/mysql
+            - mysql_data_setup:/var/lib/mysql
         command: --default-authentication-plugin=mysql_native_password            
         networks:
-            - etc
+            - setup
     phpmyadmin:
         image: phpmyadmin:5
-        container_name: phpmyadmin-etc
+        container_name: phpmyadmin-setup
         ports:
-            - 8081:80
+            - 8086:80
         restart: "no"
         environment:
             PMA_HOST: db
         depends_on:
             - db
         networks:
-            - etc   
+            - setup   
     redis:
         image: redis:7
-        container_name: redis-etc
+        container_name: redis-setup
         volumes:
-            - redis_data_etc:/data        
+            - redis_data_setup:/data        
         networks:
-            - etc
+            - setup
 
 networks:
-    etc:
+    setup:
 
 volumes:
-    mysql_data_etc:
+    mysql_data_setup:
         driver: local       
-    redis_data_etc:
+    redis_data_setup:
         driver: local
