--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         volumes:
             - ./:/var/www/html/
         ports:
-            - 3006:80             
+            - 85:80             
         depends_on:
             - redis
         networks:
@@ -24,10 +24,10 @@ services:
         container_name: mysql-setup
         restart: unless-stopped
         environment:
-            MYSQL_DATABASE: ${DB_DATABASE:-laravel}
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
-            MYSQL_PASSWORD: ${DB_PASSWORD:-userpass}
-            MYSQL_USER: ${DB_USERNAME:-username}
+            MYSQL_DATABASE: dbsetup
+            MYSQL_ROOT_PASSWORD: 123456
+            MYSQL_PASSWORD: 123456
+            MYSQL_USER: teste
         volumes:
             - mysql_data_setup:/var/lib/mysql
         command: --default-authentication-plugin=mysql_native_password            
