--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
     app:
-        container_name: php-apache-etc
+        container_name: php-apache-setup
         build:
             context: .
             dockerfile: Dockerfile
@@ -14,53 +14,50 @@ services:
         volumes:
             - ./:/var/www/html/
         ports:
-            - 3000:80             
+            - 85:80             
         depends_on:
             - redis
         networks:
-            - etc            
+            - setup            
     db:
         image: mysql:8
-        container_name: mysql-etc
+        container_name: mysql-setup
         restart: unless-stopped
         environment:
-            MYSQL_DATABASE: dbmodelo
+            MYSQL_DATABASE: dbsetup
             MYSQL_ROOT_PASSWORD: 123456
             MYSQL_PASSWORD: 123456
-            MYSQL_USER: etc
+            MYSQL_USER: teste
         volumes:
-            - mysql_data_etc:/var/lib/mysql
-        ports:
-            - "3388:3306"
+            - mysql_data_setup:/var/lib/mysql
         command: --default-authentication-plugin=mysql_native_password            
         networks:
-            - etc
+            - setup
     phpmyadmin:
         image: phpmyadmin:5
-        container_name: phpmyadmin-etc
+        container_name: phpmyadmin-setup
         ports:
-            - 8082:80
+            - 8086:80
         restart: "no"
         environment:
             PMA_HOST: db
         depends_on:
             - db
         networks:
-            - etc   
+            - setup   
     redis:
         image: redis:7
-        container_name: redis-etc
+        container_name: redis-setup
         volumes:
-            - redis_data_etc:/data        
+            - redis_data_setup:/data        
         networks:
-            - etc
+            - setup
 
 networks:
-    etc:
-        driver: bridge
+    setup:
 
 volumes:
-    mysql_data_etc:
+    mysql_data_setup:
         driver: local       
-    redis_data_etc:
+    redis_data_setup:
         driver: local
