--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
     app:
-        container_name: php-apache-setup
+        container_name: php-apache-etc
         build:
             context: .
             dockerfile: Dockerfile
@@ -14,50 +14,50 @@ services:
         volumes:
             - ./:/var/www/html/
         ports:
-            - 85:80             
+            - 3002:80             
         depends_on:
             - redis
         networks:
-            - setup            
+            - etc            
     db:
         image: mysql:8
-        container_name: mysql-setup
+        container_name: mysql-etc
         restart: unless-stopped
         environment:
-            MYSQL_DATABASE: dbsetup
+            MYSQL_DATABASE: secretariadb
             MYSQL_ROOT_PASSWORD: 123456
             MYSQL_PASSWORD: 123456
-            MYSQL_USER: teste
+            MYSQL_USER: laravel
         volumes:
-            - mysql_data_setup:/var/lib/mysql
+            - mysql_data_etc:/var/lib/mysql
         command: --default-authentication-plugin=mysql_native_password            
         networks:
-            - setup
+            - etc
     phpmyadmin:
         image: phpmyadmin:5
-        container_name: phpmyadmin-setup
+        container_name: phpmyadmin-etc
         ports:
-            - 8086:80
+            - 8081:80
         restart: "no"
         environment:
             PMA_HOST: db
         depends_on:
             - db
         networks:
-            - setup   
+            - etc   
     redis:
         image: redis:7
-        container_name: redis-setup
+        container_name: redis-etc
         volumes:
-            - redis_data_setup:/data        
+            - redis_data_etc:/data        
         networks:
-            - setup
+            - etc
 
 networks:
-    setup:
+    etc:
 
 volumes:
-    mysql_data_setup:
+    mysql_data_etc:
         driver: local       
-    redis_data_setup:
+    redis_data_etc:
         driver: local
